# fractal-geometry-renderer

./: .gitignore  README.md
Experimentation/smallpt/: CMakeLists.txt
FractalGeometryRenderer/: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  vcpkg.json
FractalGeometryRenderer/FractalGeometryRenderer/: CMakeLists.txt  buildAndLink.cmake  main.cpp  runBenchmarks.bat  runPrimaryBenchmarks.bat  runSecondaryBenchmarks.bat
FractalGeometryRenderer/FractalGeometryRenderer/kernels/: hello_world.cl  infinite_spheres.cl  julia.cl  klein_bottle.cl  mandelbrot.cl  mandelbrot_zoom.cl  mandelbulb.cl  mandelbulb_cross_section.cl  planet.cl  sierpinski_collection.cl  sierpinski_cube.cl  sierpinski_tetrahedron.cl  sphere_box.cl  terrain.cl  trivial.cl
FractalGeometryRenderer/FractalGeometryRenderer/kernels/benchmarks/: mandelbulb_base.cl  mandelbulb_bounding_volume.cl  mandelbulb_hard_shadows.cl  mandelbulb_linear_epsilon.cl  mandelbulb_phong.cl  sierpinski_ALL.cl  sierpinski_base.cl  sierpinski_bounding_volume.cl  sierpinski_hard_shadows.cl  sierpinski_linear_epsilon.cl  sierpinski_phong.cl  sierpinski_soft_shadows.cl  sphere_box_benchmark.cl
FractalGeometryRenderer/FractalGeometryRenderer/kernels/include/: complex.cl  defines.cl  main.cl  sdf.cl  sierpinski.cl  simplexnoise1234.cl  template_scene.cl  types.cl  utils.cl
FractalGeometryRenderer/FractalGeometryRenderer/source/: FractalGeometryRenderer.hpp  Renderer.cpp  Window.cpp
FractalGeometryRenderer/FractalGeometryRenderer/source/include/: Benchmark.h  Camera.h  Events.h  Renderer.h  Scene.h  Window.h
FractalGeometryRenderer/FractalGeometryRenderer/test/: CMakeLists.txt
FractalGeometryRenderer/FractalGeometryRenderer/test/unittest/: CMakeLists.txt  test1.cpp  testBenchmark.cpp  testCommonScenes.cpp  testResolutions.cpp  testScene.cpp  testTimer.cpp
FractalGeometryRenderer/cmake/: FindNvToolExt.cmake  FindnvToolsExt.cmake
FractalGeometryRenderer/documentation/: Doxyfile  installation guide.txt
FractalGeometryRenderer/documentation/application/: Doxyfile
FractalGeometryRenderer/documentation/application/html/: _benchmark_8h.html  _benchmark_8h_source.html  _camera_8h.html  _camera_8h_source.html  _events_8h.html  _events_8h_source.html  _fractal_geometry_renderer_8hpp.html  _fractal_geometry_renderer_8hpp_source.html  _renderer_8cpp.html  _renderer_8cpp_source.html  _renderer_8h.html  _renderer_8h_source.html  _scene_8h.html  _scene_8h_source.html  _timer_8h.html  _timer_8h_source.html  _vector3_8h.html  _window_8cpp.html  _window_8cpp_source.html  _window_8h.html  _window_8h_source.html  annotated.html  annotated_dup.js  class_benchmark.js  class_camera.html  class_camera.js  class_fractal_geometry_renderer.js  class_fractal_geometry_renderer_1_1_camera-members.html  class_fractal_geometry_renderer_1_1_camera.html  class_fractal_geometry_renderer_1_1_camera.js  class_fractal_geometry_renderer_1_1_fractal_geometry_renderer-members.html  class_fractal_geometry_renderer_1_1_fractal_geometry_renderer.html  class_fractal_geometry_renderer_1_1_fractal_geometry_renderer.js  class_fractal_geometry_renderer_1_1_renderer-members.html  (+68 more)
FractalGeometryRenderer/documentation/html/: _benchmark_8h.html  _benchmark_8h__dep__incl.map  _benchmark_8h__dep__incl.md5  _benchmark_8h__incl.map  _benchmark_8h__incl.md5  _benchmark_8h_source.html  _camera_8h.html  _camera_8h.js  _camera_8h__dep__incl.map  _camera_8h__dep__incl.md5  _camera_8h__incl.map  _camera_8h__incl.md5  _camera_8h_source.html  _events_8h.html  _events_8h__dep__incl.map  _events_8h__dep__incl.md5  _events_8h__incl.map  _events_8h__incl.md5  _events_8h_source.html  _fast_noise_lite_8h.html  _fast_noise_lite_8h__incl.map  _fast_noise_lite_8h__incl.md5  _fast_noise_lite_8h_source.html  _fractal_geometry_renderer_8hpp.html  _fractal_geometry_renderer_8hpp__incl.map  _fractal_geometry_renderer_8hpp__incl.md5  _fractal_geometry_renderer_8hpp_source.html  _renderer_8cpp.html  _renderer_8cpp__incl.map  _renderer_8cpp__incl.md5  _renderer_8cpp_source.html  _renderer_8h.html  _renderer_8h__dep__incl.map  _renderer_8h__dep__incl.md5  _renderer_8h__incl.map  _renderer_8h__incl.md5  _renderer_8h_source.html  _scene_8h.html  _scene_8h__dep__incl.map  _scene_8h__dep__incl.md5  (+543 more)
FractalGeometryRenderer/documentation/kernels/: Doxyfile
FractalGeometryRenderer/screenshots/: README.md  stylesheet.css
FractalGeometryRenderer/screenshots/Feature Comparison/: index.html
FractalGeometryRenderer/screenshots/Gallery/: index.html
FractalGeometryRenderer/screenshots/Videos/: index.html  videos.html
Ray tracers/InOneWeekend Ray Marcher/: CMakeLists.txt
Ray tracers/InOneWeekend Ray Marcher/source/: camera.h  color.h  main.cpp  utils.h
Ray tracers/Ray Marcher/: CMakeLists.txt
Ray tracers/Ray Marcher/source/: Controller.h  Ray.h  Renderer.h  Vector3.h  Window.h  camera.h  main.cpp  render.h  smallpt.cpp  structs.h
Ray tracers/smallpt ray marcher/: CMakeLists.txt
Ray tracers/smallpt ray marcher/source/: render.h  smallpt.cpp  structs.h
RealtimeFractalRenderer/: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  vcpkg.json
RealtimeFractalRenderer/RealtimeFractalRenderer/: CMakeLists.txt  main.cpp
RealtimeFractalRenderer/RealtimeFractalRenderer/kernels/: add_numbers.cl  infinite-spheres.cl  infinite_spheres.cl  main.bc  main.cl  main.spv  main_c.cl  mandelbulb.cl  sierpinski_cube.cl  sierpinski_tetrahedron.cl  sphere-box.cl  sphere_box.cl  sphere_box_camera_path.cl  terrain.cl  trace.cl
RealtimeFractalRenderer/RealtimeFractalRenderer/source/: Benchmark.h  Camera.h  Controller.cpp  Display.cpp  Display.h  Events.h  FractalGeometryRenderer.hpp  Renderer.cpp  Renderer.h  Scene.h  Timer.h  Utils.h  Window.cpp  Window.h  constants.h  header.h
RealtimeFractalRenderer/RealtimeFractalRenderer/test/: CMakeLists.txt
RealtimeFractalRenderer/documentation/: README.md  installation guide.txt
RealtimeFractalRenderer/documentation/application/: Doxyfile
RealtimeFractalRenderer/documentation/kernels/: Doxyfile
RealtimeFractalRenderer/screenshots/: README.md
(+883 files in other folders)
